@@ -1,5 +1,5 @@
 /* This is a generated file, edit the .stub.php file instead.
- * Stub hash: bf1d22072bd147128a33d82f8b3fc441cf95156a */
+ * Stub hash: d02c3c772eab5d9c1310839d2464887993f8e8de */
 
 ZEND_BEGIN_ARG_WITH_RETURN_TYPE_MASK_EX(arginfo_socket_select, 0, 4, MAY_BE_LONG|MAY_BE_FALSE)
 	ZEND_ARG_TYPE_INFO(1, read, IS_ARRAY, 1)
@@ -915,6 +915,9 @@ static void register_sockets_symbols(int module_number)
 #endif
 	REGISTER_LONG_CONSTANT("SOL_TCP", IPPROTO_TCP, CONST_PERSISTENT);
 	REGISTER_LONG_CONSTANT("SOL_UDP", IPPROTO_UDP, CONST_PERSISTENT);
+#if defined(IPPROTO_UDPLITE)
+	REGISTER_LONG_CONSTANT("SOL_UDPLITE", IPPROTO_UDPLITE, CONST_PERSISTENT);
+#endif
 #if HAVE_IPV6
 	REGISTER_LONG_CONSTANT("IPV6_UNICAST_HOPS", IPV6_UNICAST_HOPS, CONST_PERSISTENT);
 #endif
@@ -1017,6 +1020,12 @@ static void register_sockets_symbols(int module_number)
 #endif
 #if defined(IP_PMTUDISC_OMIT)
 	REGISTER_LONG_CONSTANT("IP_PMTUDISC_OMIT", IP_PMTUDISC_OMIT, CONST_PERSISTENT);
+#endif
+#if defined(UDPLITE_SEND_CSCOV)
+	REGISTER_LONG_CONSTANT("UDPLITE_SEND_CSCOV", UDPLITE_SEND_CSCOV, CONST_PERSISTENT);
+#endif
+#if defined(UDPLITE_RECV_CSCOV)
+	REGISTER_LONG_CONSTANT("UDPLITE_RECV_CSCOV", UDPLITE_RECV_CSCOV, CONST_PERSISTENT);
 #endif
 }
 
